# portfolio-review-etl

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  extractReviewSetup.yaml  pyproject.toml
src/review_etl/common/: argparse_utils.py  config_loader.py  logger_utils.py  mongo_db.py
src/review_etl/config/: mongo_constants.py
src/review_etl/etl/scraper/: app_store.py  factory_scraper.py  play_store.py  scraper.py
src/review_etl/scripts/: append_company.py  append_reviews.py
